# Telelog

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: benchmark.yml  release.yml
benches/: benchmarks.rs
benchmarks/basic_logging/critical/base/: estimates.json  sample.json  tukey.json
benchmarks/basic_logging/critical/new/: benchmark.json
benchmarks/basic_logging/critical/report/: index.html
benchmarks/basic_logging/debug/base/: benchmark.json
benchmarks/basic_logging/debug/new/: estimates.json  sample.json  tukey.json
benchmarks/basic_logging/debug/report/: index.html
benchmarks/basic_logging/report/: index.html
benchmarks/component_tracking/report/: index.html
benchmarks/concurrent_logging/report/: index.html
benchmarks/context_management/report/: index.html
benchmarks/file_output/report/: index.html
benchmarks/high_volume/report/: index.html
benchmarks/level_filtering/report/: index.html
benchmarks/logger_init/report/: index.html
benchmarks/output_modes/report/: index.html
benchmarks/performance_profiling/report/: index.html
benchmarks/report/: index.html
benchmarks/structured_logging/report/: index.html
benchmarks/visualization/report/: index.html
examples/: 05_visualization.rs  README.md  basic.rs  component_tracking.rs  configuration.rs  visualization_test.rs
examples/python/: visualization.py
src/: config.rs  context.rs  lib.rs  logger.rs  output.rs  python.rs  visualization.rs
src/output/: async.rs  buffered.rs  console.rs  file.rs  mod.rs  multi.rs
telelog/: __init__.py  __init__.pyi
(+276 files in other folders)
