[package]
name = "telelog"
version = "0.1.0"
edition = "2021"
description = "High-performance structured logging library for Rust with rich visualization capabilities"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vedant-asati03/telelog"
homepage = "https://github.com/vedant-asati03/telelog"
documentation = "https://docs.rs/telelog"
keywords = [
    "logging",
    "structured",
    "profiling",
    "visualization",
    "performance",
]
categories = ["development-tools::debugging", "development-tools::profiling"]
authors = ["Vedant Asati <vedant.asati03@gmail.com>"]
readme = "README.md"
exclude = [
    "*.log",
    "*.mmd",
    "charts/",
    "demo_logs/",
    ".vscode/",
    ".venv/",
    "target/wheels/",
]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
chrono = { version = "0.4.42", features = ["serde"] }
parking_lot = "0.12.4"

# Optional features
crossterm = { version = "0.29.0", optional = true }
console = { version = "0.16.1", optional = true }
sysinfo = { version = "0.36.0", optional = true }
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }
tokio = { version = "1.47.1", features = ["full"], optional = true }

[dev-dependencies]
tempfile = "3.21.0"

[features]
default = ["console", "system-monitor"]
console = ["dep:crossterm", "dep:console"]
system-monitor = ["dep:sysinfo"]
python = ["dep:pyo3"]
async = ["dep:tokio"]

[lib]
name = "telelog"
crate-type = ["cdylib", "rlib"]
